fix z-index of player level on explore

--- a/web/src/components/Explore/styles.sass
+++ b/web/src/components/Explore/styles.sass
@@ -66,7 +66,6 @@
     font-size: 12px
     font-weight: bold
     border-radius: 5px
-    z-index: 10
     top: 6px
     right: 2px
 
@@ -77,7 +76,6 @@
     font-size: 12px
     font-weight: bold
     border-radius: 5px
-    z-index: 10
     top: 20px
     right: 2px
 
